# cli-typing-test

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  output-test.cpp  typetest.sln  typetest.vcxproj  typetest.vcxproj.filters
base-classes/: CMakeLists.txt  Typ_Line.cpp  Typ_Line.h  Typ_Word.cpp  Typ_Word.h  base-classes.vcxproj  base-classes.vcxproj.filters  cmake_install.cmake
base-classes/Debug/: base-classes.lib
base-classes/base-classes.dir/Debug/: base-classes.lib.recipe
base-classes/base-classes.dir/Debug/base-classes.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  base-classes.lastbuildstate
main-classes/: CMakeLists.txt  TypMain.cpp  cmake_install.cmake
src/: CMakeLists.txt  TypMain.cpp  TypMain.h
src/base-classes/: CMakeLists.txt  TypLine.cpp  TypLine.h  TypWord.cpp  TypWord.h
typetest.dir/Debug/: typetest.exe.recipe  typetest.ilk
typetest.dir/Debug/typetest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
